--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.kbhargav163 }}
-          password: ${{ secrets.Spark@163 }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.kbhargav163 }}/quiz-backend:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/quiz-backend:latest .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.kbhargav163 }}/quiz-backend:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/quiz-backend:latest
