--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -31,4 +31,4 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            cd ~/ && docker-compose pull && docker-compose up -d
+            cd ~/quiz-deploy && docker-compose pull && docker-compose up -d
