--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=quiz
 server.port=8080
 
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.prometheus.enabled=true
